overflow-hidden added to lobby so canvas doesn't create a scroll bar, attempted to prevent xss in chat

--- a/client/public/style/main.css
+++ b/client/public/style/main.css
@@ -21,3 +21,7 @@ html, body {
   overflow-y: auto;
   overflow-wrap: break-word;
 }
+
+.no-overflow {
+  overflow: hidden;
+}
